Fix svg logo being cut off

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -151,10 +151,9 @@ a {
     float: right;
     font: {
       size: 2rem;
-      weight: lighter;
+      weight: 500;
     }
 
-    margin-top: 5px;
     text-transform: uppercase;
   }
 }
